# FreeCAD

cMake/FreeCAD_Helpers/: CheckInterModuleDependencies.cmake  InitializeFreeCADBuildOptions.cmake
src/App/: Application.cpp  Application.h  ApplicationPy.cpp  CMakeLists.txt  Measure.cpp  Measure.h  MeasureAngle.cpp  MeasureAngle.h  MeasureLength.cpp  MeasureLength.h  MeasureManager.cpp  MeasureManager.h
src/Base/: Type.h
src/Gui/: Application.cpp  ArcEngine.cpp  ArcEngine.h  CMakeLists.txt  CommandView.cpp  SoTextLabel.cpp  TaskMeasure.cpp  TaskMeasure.h  ViewProviderMeasurementBase.cpp  ViewProviderMeasurementBase.h  Workbench.cpp
src/Gui/Icons/: resource.qrc
src/Mod/: CMakeLists.txt
src/Mod/Measure/: CMakeLists.txt  InitGui.py  MeasureCOM.py  MeasureGlobal.h  UtilsMeasure.py
src/Mod/Measure/App/: AppMeasure.cpp  CMakeLists.txt  Measure.cpp  (+19 more)
src/Mod/Measure/Gui/: AppMeasureGui.cpp  CMakeLists.txt  Command.cpp  DlgPrefsMeasureAppearanceImp.cpp  DlgPrefsMeasureAppearanceImp.ui  PreCompiled.cpp  PreCompiled.h  ViewProviderMeasureAngle.cpp  ViewProviderMeasureAngle.h  ViewProviderMeasureArea.cpp  ViewProviderMeasureArea.h  ViewProviderMeasureBase.cpp  ViewProviderMeasureBase.h  ViewProviderMeasureDistance.cpp  ViewProviderMeasureDistance.h  ViewProviderMeasureDistancePoints.cpp  ViewProviderMeasureDistancePoints.h  ViewProviderMeasureLength.cpp  ViewProviderMeasureLength.h  ViewProviderMeasurePosition.cpp  ViewProviderMeasurePosition.h  ViewProviderMeasureRadius.cpp  ViewProviderMeasureRadius.h  ViewProviderMeasurementBase.cpp  ViewProviderMeasurementBase.h
(+22 files in other folders)
